fixed refactoring oversight

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/api/v1
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mybatis/*.xml
-mybatis.type-aliases-package=tvz.ntpr.ntrpdbrestapi.entity
+mybatis.type-aliases-package=tvz.ntpr.api.entity
 
 # database
 spring.datasource.username=admin
