added linux binaries

--- a/client/.vscode/tasks.json
+++ b/client/.vscode/tasks.json
@@ -3,18 +3,14 @@
     "tasks": [
 		{
 			"type": "cppbuild",
-			"label": "JWAFP Library Build",
+			"label": "JWAFP Library Build - Windows",
 			"command": "C:/msys64/ucrt64/bin/g++.exe",
 			"args": [
 				"-fdiagnostics-color=always",
-				"-I",
-				"C:\\Program Files (x86)\\vcpkg\\installed\\x64-windows\\include",
-				"-L",
-				"C:\\Program Files (x86)\\vcpkg\\installed\\x64-windows\\lib",
-				"-g",
-				"${workspaceFolder}\\source\\jwafp_library.cpp",
-				"-o",
-				"${workspaceFolder}\\bin\\jwafp_handler embedded dlls\\jwafp_library.dll",
+				"-I", "C:\\Program Files (x86)\\vcpkg\\installed\\x64-windows\\include",
+				"-L", "C:\\Program Files (x86)\\vcpkg\\installed\\x64-windows\\lib",
+				"-g", "${workspaceFolder}\\source\\jwafp_library.cpp",
+				"-o", "${workspaceFolder}\\bin\\jwafp_handler embedded shared libraries\\jwafp_library.dll",
 				"-lcurl",
 				"-lole32",
 				"-lcomctl32",
@@ -42,22 +38,17 @@
 		},
 		{
 			"type": "shell",
-			"label": "JWAFP Handler Build",
+			"label": "JWAFP Handler Build - Windows",
 			"command": "pyinstaller.exe",
 			"args": [
 				"--onefile",
 				"--noconsole",
-				"--add-binary",
-				"${workspaceFolder}\\bin\\jwafp_handler embedded dlls\\jwafp_library.dll;.",
-				"--add-binary",
-				"${workspaceFolder}\\bin\\jwafp_handler embedded dlls\\libcurl.dll;.",
-				"--specpath",
-				"${workspaceFolder}\\build artifacts\\PyInstaller",
-				"--workpath",
-				"${workspaceFolder}\\build artifacts\\PyInstaller",
+				"--add-binary", "${workspaceFolder}\\bin\\jwafp_handler embedded shared libraries\\jwafp_library.dll;.",
+				"--add-binary", "${workspaceFolder}\\bin\\jwafp_handler embedded shared libraries\\libcurl.dll;.",
+				"--specpath", "${workspaceFolder}\\build artifacts\\PyInstaller",
+				"--workpath", "${workspaceFolder}\\build artifacts\\PyInstaller",
 				"--clean",
-				"--distpath",
-				"bin",
+				"--distpath", "bin",
 				"${workspaceFolder}\\source\\jwafp_handler.py"
 			],
 			"options": {
@@ -72,7 +63,7 @@
 		},
 		{
 			"type": "shell",
-			"label": "JWAFP Installer Build",
+			"label": "JWAFP Installer Build - Windows",
 			"command": "ISCC.exe",
 			"args": [
 				"/O\"${workspaceFolder}\\bin\"",
@@ -89,12 +80,128 @@
 			"detail": "Build protocol handler installer via Inno Setup"
 		},
 		{
-			"label": "Build",
+			"type": "cppbuild",
+			"label": "JWAFP Library Build - Linux",
+			"command": "/usr/bin/g++",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-g", "${workspaceFolder}/source/jwafp_library_linux.cpp",
+				"-o", "${workspaceFolder}/bin/jwafp_handler embedded shared libraries/jwafp_library.so",
+				"-I", "/usr/include/gtk-3.0",
+				"-I", "/usr/include/pango-1.0",
+				"-I", "/usr/include/cairo",
+				"-I", "/usr/include/gdk-pixbuf-2.0",
+				"-I", "/usr/include/at-spi2-atk/2.0",
+				"-I", "/usr/include/at-spi-2.0",
+				"-I", "/usr/include/atk-1.0",
+				"-I", "/usr/include/dbus-1.0",
+				"-I", "/usr/lib64/dbus-1.0/include",
+				"-I", "/usr/include/elogind",
+				"-I", "/usr/include/fribidi",
+				"-I", "/usr/include/libpng16",
+				"-I", "/usr/include/pixman-1",
+				"-I", "/usr/include/harfbuzz",
+				"-I", "/usr/include/freetype2",
+				"-I", "/usr/include/gio-unix-2.0",
+				"-I", "/usr/lib64/libffi/include",
+				"-I", "/usr/include/glib-2.0",
+				"-I", "/usr/lib64/glib-2.0/include",
+				"-I", "/usr/include/libmount",
+				"-I", "/usr/include/blkid",
+				"-lgtk-3",
+				"-lgdk-3",
+				"-lpangocairo-1.0",
+				"-lcairo-gobject",
+				"-lgdk_pixbuf-2.0",
+				"-latk-1.0",
+				"-lpango-1.0",
+				"-lcairo",
+				"-lharfbuzz",
+				"-lgio-2.0",
+				"-lgobject-2.0",
+				"-lglib-2.0",
+				"-lcurl",
+				"-lssl",
+				"-lcrypto",
+				"-fPIC",
+				"-pthread",
+				"-shared"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": false
+			},
+			"detail": "Build JWAFP Library as a shared object"
+		},
+		{
+			"type": "shell",
+			"label": "JWAFP Handler Build - Linux",
+			"command": "python3",
+			"args": [
+				"-m", "PyInstaller",
+				"--onefile",
+				"--name", "jwafp_handler",
+				"--noconsole",
+				"--add-binary", "${workspaceFolder}/bin/jwafp_handler embedded shared libraries/jwafp_library.so:.",
+				"--specpath", "${workspaceFolder}/build artifacts/PyInstaller",
+				"--workpath", "${workspaceFolder}/build artifacts/PyInstaller",
+				"--clean",
+				"--distpath", "${workspaceFolder}/bin/linux/bin",
+				"${workspaceFolder}/source/jwafp_handler_linux.py"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": false
+			},
+			"detail": "Build JWAFP Handler as an executable with embedded shared objects"
+		},
+		{
+			"type": "shell",
+			"label": "JWAFP Installer Package - Linux",
+			"command": "tar",
+			"args": [
+				"-czv",
+				"-f", "${workspaceFolder}/bin/jwafp_handler.tar.gz",
+				"-C", "${workspaceFolder}/bin/linux",
+				"."
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": false
+			},
+			"detail": "Package protocol handler installer into TGZ archive"
+		},
+		{
+			"label": "Build - Windows",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"JWAFP Library Build",
-				"JWAFP Handler Build",
-				"JWAFP Installer Build"
+				"JWAFP Library Build - Windows",
+				"JWAFP Handler Build - Windows",
+				"JWAFP Installer Build - Windows"
+			],
+			"problemMatcher": []
+		},
+		{
+			"label": "Build - Linux",
+			"dependsOrder": "sequence",
+			"dependsOn":[
+				"JWAFP Library Build - Linux",
+				"JWAFP Handler Build - Linux",
+				"JWAFP Installer Package - Linux"
 			],
 			"problemMatcher": []
 		}
