--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,6 +28,8 @@
     </scm>
     <properties>
         <java.version>21</java.version>
+        <application.title>JWAFP-Database API</application.title>
+        <application.version>${version}</application.version>
     </properties>
     <dependencies>
         <!-- Spring -->
