--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=JWAFP-CORE
 server.port=8080
 server.servlet.context-path=/jwafp
+spring.banner.location=classpath:/banner.txt
+application.title=@application.title@
+application.version=@application.version@
+
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=50MB
