--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 server.servlet.context-path=/api/v1
 spring.banner.location=classpath:/banner.txt
 application.title=@application.title@
-application.version=@application.version@
+application.version=@project.version@
 
 # mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
