--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 server.servlet.context-path=/jwafp
 spring.banner.location=classpath:/banner.txt
 application.title=@application.title@
-application.version=@application.version@
+application.version=@project.version@
 
 spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=50MB
